--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-router-dom": "^5.1.3",
     "antd": "^4.9.2",
     "core-js": "^2.6.12",
+    "ipfs-api": "^26.1.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.12.21",
